# Pulsar

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
Editor/: CMakeLists.txt
Editor/Chrome/AppKit/: AppKit.mm
Editor/src/PulsarEditor/: main.cpp
Engine/: CMakeLists.txt
Lib/: CMakeLists.txt
Lib/Core/: CMakeLists.txt
Lib/Core/benchmarks/PulsarCore/: Allocator.cpp
Lib/Core/src/PulsarCore/: Log.cpp  Log.hpp  Result.hpp  Types.hpp
Lib/Core/src/PulsarCore/GC/: Pointer.hpp
Lib/Core/src/PulsarCore/GC/Allocators/: Arena.hpp
Lib/Core/src/PulsarCore/Util/: Macros.hpp
Lib/Core/tests/PulsarCore/: Result.cpp  Types.cpp
Lib/Core/tests/PulsarCore/GC/: Pointer.cpp
Lib/Core/tests/PulsarCore/GC/Allocators/: Arena.cpp
Lib/Window/: CMakeLists.txt
Lib/Window/src/PulsarWindow/: Window.hpp
Meta/: Pulsar.sh
dependencies/: vcpkg.json
